# paseo-voice

./: .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  LICENSE  README.md  config.example.json  package.json  pnpm-lock.yaml  tsconfig.json
.agent/: context.yaml  deploy.yaml  state.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/paseo-control-plane/: Cargo.toml
crates/paseo-control-plane/src/: auto_reply.rs  clock.rs  commands.rs  config.rs  console.rs  dictation.rs  journal.rs  lib.rs  main.rs  paseo.rs  protocol.rs  provider.rs  realtime.rs  runtime.rs  secrets.rs  summarise.rs  tools.rs  voice_mode.rs
crates/paseo-control-plane/tests/: backend_cutover.rs  cli.rs  config_and_secrets.rs  protocol.rs  provider.rs  runtime.rs  summarise.rs  system_process_executor.rs  tools_rust.rs  voice_mode.rs  write_and_recovery.rs
crates/paseo-safety-core/: Cargo.toml
crates/paseo-safety-core/src/: lib.rs
crates/paseo-safety-core/tests/: concurrency.rs  safety_core.rs  summary_queue.rs  values.rs
docs/: DICTATION_DECISIONS_PENDING.md  DICTATION_IMPLEMENTATION_PROMPTS.md  IMPLEMENTATION.md  RUST_CONTRACT_CASES.json  RUST_CONTROL_PLANE_PLAN.md  RUST_DECISIONS_PENDING.md  RUST_PROTOCOL_FIXTURES.json  RUST_SAFETY_CONTRACT.md  RUST_SHADOW_TRACES.json
docs/agents/: publish-boundary.md  state.md
docs/agents/playbooks/: update-agent-docs.md  verify-review-deploy.md
public/: app.js  avatar-blocks.js  avatar-params.js  dictation-target.js  index.html  interaction-gate.js  microphone-config.js  microphone-lifecycle.js  paseo-version-badge.js  pcm-capture-worklet.js  pcm-playback-worklet.js  playback-frame.js  shortcut-config.js  style.css  turn-context.js
scripts/: app-wiring.test.mjs  avatar-params.test.mjs  dictation-target.test.mjs  generate-avatar-depth.mjs  interaction-gate.test.mjs  lint-agents.mjs  microphone-config.test.mjs  microphone-lifecycle.test.mjs  pcm-capture-worklet.test.mjs  pcm-playback-worklet.test.mjs  playback-frame.test.mjs  shortcut-config.test.mjs  turn-context.test.mjs
scripts/helpers/: fake-browser.mjs
src/: commands.ts  config.ts  console.ts  control-plane-client.ts  exec.ts  gate.ts  index.ts  instructions.ts  log.ts  mock-realtime.ts  paseo.ts  realtime.ts  secrets.ts  server.ts  summarise.ts  tools.ts  wiring.ts  ws-socket.ts
test/: config.test.ts  control-plane-client.test.ts  gate.test.ts  paseo.test.ts  phase0-contract.test.ts  realtime.test.ts  secrets.test.ts  summarise.test.ts  tools.test.ts
test/fixtures/: cli-error.json  logs-text.txt  ls.json
