[workspace]
members = ["crates/paseo-control-plane", "crates/paseo-safety-core"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97.0"
license = "MIT"
publish = false

[workspace.dependencies]
proptest = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
tempfile = "3.27.0"
wait-timeout = "0.2.1"

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

[profile.release]
codegen-units = 1
lto = "thin"
overflow-checks = true
strip = "symbols"
