[package]
name = "paseo-control-plane"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
paseo-safety-core = { path = "../paseo-safety-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
rusqlite.workspace = true
wait-timeout.workspace = true
axum.workspace = true
base64.workspace = true
futures-util.workspace = true
rand.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tower-http.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
